--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,20 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dependencies.serenity]
+default-features = false
+features = [
+  "client",
+  "gateway",
+  "rustls_backend",
+  "model",
+  "unstable_discord_api",
+]
+version = "0.10"
+
+[dependencies.tokio]
+features = [
+  "macros",
+  "rt-multi-thread",
+]
+version = "1.0"
