--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 dotenv = "0.15.0"
+rand = "0.8.4"
 
 [dependencies.serenity]
 default-features = false
@@ -17,7 +18,7 @@ features = [
   "model",
   "unstable_discord_api",
 ]
-version = "0.10"
+version = "0.10.9"
 
 [dependencies.tokio]
 features = [
